feat: Ads service worker for offline viewing

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </nav>
   </header>
 
-  <main id="maincontent">
+  <main id="maincontent" role="main">
     <section id="map-container">
       <div id="map" role="application" aria-hidden="true" aria-describedby="map-help"></div>
       <div hidden id="map-help">A map showing locations of filtered restaurants</div>
