--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <main id="maincontent" role="main">
     <section id="map-container">
-      <div id="map" role="application" aria-hidden="true" aria-describedby="map-help"></div>
+      <div id="map" aria-hidden="true" role="application" aria-describedby="map-help"></div>
       <div hidden id="map-help">A map showing locations of filtered restaurants</div>
     </section>
     <section>
